@@ -1,6 +1,6 @@
 {
-  "count": 17,
-  "uniques": 2,
+  "count": 18,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2022-04-18T00:00:00Z",
@@ -20,6 +20,11 @@
     {
       "timestamp": "2022-04-25T00:00:00Z",
       "count": 6,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
