@@ -1,3 +1,9 @@
+2022-04-29T02:02:14Z:
+* notice: last 14d: all unq: 18 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 181 35 / 198 39
+* notice: next accum: outdated-all outdated-unq / all unq: 181 35 / 199 40
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-27T16:33:58Z:
 * notice: last 14d: all unq: 17 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 178 33 / 196 38
